Fixed loader on iOS, Safari

--- a/web/src/global.css
+++ b/web/src/global.css
@@ -2,10 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Tomorrow:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap");
+
 body {
   margin: 0;
   line-height: normal;
+  color: #fff;
 }
+
 :root {
   /* fonts */
   --font-tomorrow: Tomorrow;
